--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -31,7 +31,7 @@
                         <p>(Pfad mit "/" am Ende angeben)</p>
                         <label class="label has-text-black" for="rootPath">Root Path:</label>
                         <div class="control">
-                            <input class="input" type="text" id="rootPath" name="rootPath" th:field="*{rootPath}" placeholder="z. B. /home/pi/videos">
+                            <input class="input" type="text" id="rootPath" name="rootPath" th:field="*{rootPath}" placeholder="z. B. /home/berry/videostorage/">
                         </div>
                     </div>
 
